--- a/src/components/GridGallery/ColumnCard/columnCard.module.css
+++ b/src/components/GridGallery/ColumnCard/columnCard.module.css
@@ -140,3 +140,11 @@
   grid-row: span 1;
   aspect-ratio: 2/1;
 }
+
+@media screen and (max-width: 900px) {
+  .card {
+    grid-column: span 1 !important;
+    grid-row: span 1 !important;
+    aspect-ratio: 4/3 !important;
+  }
+}
