--- a/src/components/GridGallery/gridGallery.module.css
+++ b/src/components/GridGallery/gridGallery.module.css
@@ -22,6 +22,12 @@
 
 @media screen and (max-width: 900px) {
   .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .grid {
     grid-template-columns: repeat(1, 1fr);
   }
 }
